--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Esot3riA
+  email:             esot3ria@gmail.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -26,11 +26,11 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
+    # twitter:         <username>
+    github:          Esot3riA
     # email:           mailto:<mail@domain.tld>
     # rss:             https://<url>/feed.xml
-    # facebook:        <username>
+    facebook:        100004509617459
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
@@ -48,7 +48,7 @@ author1:
     # ello:            <username>
     # twitch:          <username>
     # steam:           <number>
-    # reddit:          <username>
+    reddit:          Esot3riA
     # tumblr:          <username>
     # pinterest:       <username>
     # foursquare:      <number>
