--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -30,7 +30,7 @@ author1:
     github:          Esot3riA
     # email:           mailto:<mail@domain.tld>
     # rss:             https://<url>/feed.xml
-    facebook:        100004509617459
+    # facebook:        <username>
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
