Convert to new design

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baseurl:               ''
 lang:                  kr
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Esot3riA, the Kaggler
+title:                 Esot3riA
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
