Complete basic settings

--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -13,7 +13,7 @@
 home:                  Home
 pages:                 Pages
 posts:                 Posts
-about:                 About
+about:                 Esot3riA
 related_posts:         Related Posts
 other_projects:        Other Projects
 comments:              Comments
