--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ accent_color:          rgb(210, 0, 0)
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
 # Defaults to `accent_color`.
-theme_color:           rgb(210, 0, 0)
+theme_color:           rgb(25,55,71)
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://hydejack.com/docs/configuration/>
