--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,11 +9,11 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
+    자바스크립트 개발을 좋아하는 풀 스택 개발자입니다.
+    최근에는 머신러닝을 하기 위해 데이터 과학을 공부하고 있습니다.
+    동인 음악과 리듬 게임, 맛있는 맥주도 좋아합니다.
+    
+    뭔가 대단해 보이는, 일상 생활 가능한 씹덕이 되기 위해 오늘도 노력하고 있습니다. ^~^
 
   # This photo will be used in the about section.
   picture:
