--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,6 +12,7 @@ author1:
     자바스크립트 개발을 좋아하는 풀 스택 개발자입니다.
     최근에는 머신러닝을 하기 위해 데이터 과학을 공부하고 있습니다.
     동인 음악과 리듬 게임, 맛있는 맥주도 좋아합니다.
+    현재 SW개발병으로 군 복무 중입니다.
     
     뭔가 대단해 보이는, 일상 생활 가능한 씹덕이 되기 위해 오늘도 노력하고 있습니다. ^~^
 
