Machine learning posting and Change author avatar

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,7 @@ title:                 Esot3riA
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  A Jekyll theme with JavaScript powers. "Best Theme by a Mile".
-  Combines the best of static sites and modern web apps.
-  Open `_config.yml` to edit this text.
+  Esot3riA의 종합 발자취
 
 # A shorter description for the sidebar.
 tagline:               >
@@ -36,7 +34,7 @@ tagline:               >
 keywords:              [programming, machine learning, otaku]
 
 # Used by jekyll-seo-tag.
-logo:                  /assets/img/profile.jpg
+logo:                  /assets/img/hachiroku.jpg
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
