--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,15 +14,15 @@ author1:
     동인 음악과 리듬 게임, 맛있는 맥주도 좋아합니다.
     현재 SW개발병으로 군 복무 중입니다.
     
-    뭔가 대단해 보이는, 일상 생활 가능한 씹덕이 되기 위해 오늘도 노력하고 있습니다. ^~^
+    일상 생활 가능한 씹덕이 되기 위해 오늘도 노력하고 있습니다. ^~^
 
   # This photo will be used in the about section.
   picture:
-    path:            /assets/img/profile.jpg
+    path:            /assets/img/kudryavka.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            /assets/img/profile.jpg
-      2x:            /assets/img/profile.jpg
+      1x:            /assets/img/kudryavka.jpg
+      2x:            /assets/img/kudryavka.jpg
 
   # Social media icons in sidebar.
   # Comment/uncommet to show/hide. Rearrange to change the order in which they appear.
