--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ tagline:               >
   Esot3riA의 종합 발자취
 
 # A list of keywords for your blog.
-keywords:              [programming, machine learning, otaku]
+keywords:              [programming, machine learning, doujin music]
 
 # Used by jekyll-seo-tag.
 logo:                  /assets/img/hachiroku.jpg
