--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,9 +12,9 @@ author1:
     자바스크립트 개발을 좋아하는 풀 스택 개발자입니다.
     최근에는 머신러닝을 하기 위해 데이터 과학을 공부하고 있습니다.
     동인 음악과 리듬 게임, 비주얼 노벨을 좋아합니다.
-    현재 SW개발병으로 군 복무 중입니다.
-    
-    일상 생활 가능한 씹덕이 되기 위해 오늘도 노력하고 있습니다. ^~^
+    현재 경희대학교 컴퓨터공학과 3학년 복학 예정입니다.
+
+    일상 생활 가능한 혼모노가 되기 위해 오늘도 노력하고 있습니다. ^~^
 
   # This photo will be used in the about section.
   picture:
@@ -30,7 +30,7 @@ author1:
     # twitter:         jekyllrb
     github:          esot3ria
     # download:        <url>
-    # email:           <mail@domain.tld>
+    email:           esot3ria@gmail.com
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
