--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -30,7 +30,7 @@ author1:
     twitter:         esot3ria
     github:          esot3ria
     # download:        <url>
-    # email:           esot3ria@gmail.com
+    email:           esot3ria@gmail.com
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
