--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ title:                 Esot3riA
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Esot3riA의 종합 발자취
+  에소테리아의 종합 발자취
 
 # A shorter description for the sidebar.
 tagline:               >
-  Esot3riA의 종합 발자취
+  에소테리아의 종합 발자취
 
 # A list of keywords for your blog.
 keywords:              [programming, machine learning, doujin music]
