--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ tagline:               >
 keywords:              [programming, machine learning, doujin music]
 
 # Used by jekyll-seo-tag.
-logo:                  /assets/img/CHS-0035.png
+logo:                  /assets/img/erp.jpg
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
