--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,9 +9,8 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    자바스크립트 개발을 좋아하는 풀 스택 개발자입니다.
-    동인 음악과 리듬 게임, 비주얼 노벨을 좋아합니다.
-    현재 경희대학교 컴퓨터공학과 4학년 재학 중입니다.
+    자바스크립트 개발을 좋아하는 풀 스택 개발자입니다. 닉네임은 에소테리아라고 읽습니다.
+    현재 경희대학교 컴퓨터공학과 4학년 재학 중이며 SW마에스트로 12기 과정을 이수하고 있습니다.
     일상 생활 가능한 혼모노가 되기 위해 오늘도 노력하고 있습니다. ^~^
 
   # This photo will be used in the about section.
