--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,7 +10,7 @@ author1:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     자바스크립트 개발을 좋아하는 풀 스택 개발자입니다. 닉네임은 에소테리아라고 읽습니다.
-    현재 경희대학교 컴퓨터공학과 4학년 재학 중이며 SW마에스트로 12기 과정을 이수하고 있습니다.
+    현재 SW마에스트로 12기 과정을 이수하고 있습니다.
     일상 생활 가능한 혼모노가 되기 위해 오늘도 노력하고 있습니다. ^~^
 
   # This photo will be used in the about section.
@@ -24,7 +24,7 @@ author1:
   # Social media icons in sidebar.
   # Comment/uncommet to show/hide. Rearrange to change the order in which they appear.
   social:
-    twitter:         esot3ria
+    # twitter:         esot3ria
     github:          esot3ria
     # download:        <url>
     email:           esot3ria@gmail.com
