--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    자바스크립트 개발을 좋아하는 풀 스택 개발자입니다. 닉네임은 에소테리아라고 읽습니다.
+    백엔드 개발을 좋아하는 개발자입니다. 닉네임은 에소테리아라고 읽습니다.
     현재 SW마에스트로 12기 과정을 이수하고 있습니다.
     일상 생활 가능한 혼모노가 되기 위해 오늘도 노력하고 있습니다. ^~^
 
