--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,8 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    LINE에서 백엔드 개발자로 일하고 있습니다. 주로 동인 음악을 들으며 즐겁게 개발합니다.
+    LINE에서 백엔드 개발자로 일하고 있습니다.
+    동인 음악을 들으며 즐겁게 개발하는 것이 삶의 낙입니다.
     닉네임은 에소테리아라고 읽습니다.
     일상 생활 가능한 혼모노가 되기 위해 오늘도 노력하고 있습니다 ٩( ᐛ )و
 
