--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ tagline:               >
   에소테리아의 종합 발자취
 
 # A list of keywords for your blog.
-keywords:              [programming, machine learning, doujin music]
+keywords:              [programming, server, visual novel, doujin music]
 
 # Used by jekyll-seo-tag.
 logo:                  /assets/img/erp.jpg
@@ -78,15 +78,15 @@ theme_color:           rgb(25,55,71)
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://hydejack.com/docs/configuration/>
-google_fonts:          Roboto+Slab:400|Noto+Sans:400,400i,700,700i
+google_fonts:          Noto+Sans+KR:400|IBM+Plex+Sans+KR:400,500i,700,700i
 
 # The text font. Expects a string that is a valid CSS font-family value.
 # To change font-weight, see _sass/variables.scss
-font:                  Noto Sans, Helvetica, Arial, sans-serif
+font:                  IBM Plex Sans KR, Helvetica, Arial, sans-serif
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
 # To change font-weight, see _sass/variables.scss
-font_heading:          Roboto Slab, Helvetica, Arial, sans-serif
+font_heading:          Noto Sans KR, Helvetica, Arial, sans-serif
 
 defaults:
   # `jekyll-seo-tag` will mark collection outputs as `BlogPosting`,
